// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHue accepts a hex value 1`] = `
Array [
  <label
    class="ouiScreenReaderOnly"
    for="undefined-hue"
  >
    Select the HSV color mode 'hue' value
  </label>,
  <p
    aria-live="polite"
    class="ouiScreenReaderOnly"
  >
    #00FFFF
  </p>,
  <div
    class="ouiHue testClass1 testClass2"
  >
    <input
      aria-label="aria-label"
      class="ouiHue__range"
      data-test-subj="test subject string"
      id="undefined-hue"
      max="359"
      min="0"
      step="1"
      type="range"
      value="180"
    />
  </div>,
]
`;

exports[`OuiHue accepts a hue value 1`] = `
Array [
  <label
    class="ouiScreenReaderOnly"
    for="undefined-hue"
  >
    Select the HSV color mode 'hue' value
  </label>,
  <p
    aria-live="polite"
    class="ouiScreenReaderOnly"
  />,
  <div
    class="ouiHue testClass1 testClass2"
  >
    <input
      aria-label="aria-label"
      class="ouiHue__range"
      data-test-subj="test subject string"
      id="undefined-hue"
      max="359"
      min="0"
      step="1"
      type="range"
      value="180"
    />
  </div>,
]
`;

exports[`OuiHue is rendered 1`] = `
Array [
  <label
    class="ouiScreenReaderOnly"
    for="undefined-hue"
  >
    Select the HSV color mode 'hue' value
  </label>,
  <p
    aria-live="polite"
    class="ouiScreenReaderOnly"
  />,
  <div
    class="ouiHue testClass1 testClass2"
  >
    <input
      aria-label="aria-label"
      class="ouiHue__range"
      data-test-subj="test subject string"
      id="undefined-hue"
      max="359"
      min="0"
      step="1"
      type="range"
      value="1"
    />
  </div>,
]
`;
